cholera 0.5.9.9008
==================

- note unitMeter(dist(regular.cases[1:2, ])) in pump neighborhood vignette.


cholera 0.5.9.9007
==================

- use tsp.method argument for travelingSalesman().


cholera 0.5.9.9006
==================

- use alpha transparency for polygon periphery in addSnow() and addNeighborhoodWalking().


cholera 0.5.9.9005
==================

- add warning about valid methods for travelingSalesman().


cholera 0.5.9.9004
==================

- pass line.width argument to addSnow(type = "perimeter").


cholera 0.5.9.9003
==================

- add draft note "pearl strings to polygons".
- set in-progress messages plot.euclidean() and plot.walking() to FALSE.


cholera 0.5.9.9002
==================

- pearlString2() -> travelingSalesman().
- add polygon.method argument to addNeighborhoodEuclidean(), addNeighborhoodWalking(), plot.euclidean() and plot.walking().


cholera 0.5.9.9001
==================

- add addNeighborhoodCases(metric = "euclidean").


cholera 0.5.9.9000
==================

- CRAN release candidate.


cholera 0.5.1.9055
==================

- add pearlString2() beta.
- use traveling salesman solution for addNeighborhoodEuclidean() and neighborhoodEuclidean().
- add addNeighborhoodEuclidean(alpha.level = 0.25).


cholera 0.5.1.9054
==================

- add col argument to caseLocator().


cholera 0.5.1.9053
==================

- add addDelauny() and plot(neighborhoodVoronoi(), delauny.triangles = FALSE).


cholera 0.5.1.9052
==================

- add caseLocator(add = TRUE).


cholera 0.5.1.9051
==================

- fix euclideanPath(type = "cases") output.


cholera 0.5.1.9050
==================

- add landmarksSquares() and landmarks.squares.
- add landmarks to euclideanPath().


cholera 0.5.1.9049
==================

- consolidate addWalkingPath().


cholera 0.5.1.9048
==================

- fix zero-length arrows in plot.walking_path() and addWalkingPath().


cholera 0.5.1.9047
==================
